--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ links:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Europe/Berlin
 future:      true
-highlighter: pygments
+highlighter: rouge
 markdown:    kramdown
 paginate:    6
 paginate_path: "page:num"
