Add link to Xing

--- a/_config.yml
+++ b/_config.yml
@@ -32,10 +32,11 @@ owner:
   facebook:
   github:         StephenKing
   stackexchange:  http://stackoverflow.com/users/400222/stephenking
+  xing:           Steffen_Gebert
   linkedin:
-  instagram:      
-  flickr:         
-  tumblr:         
+  instagram:
+  flickr:
+  tumblr:
   # For Google Authorship https://plus.google.com/authorship
   google_plus:
 
