Add link to SlideShare

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ owner:
   github:         StephenKing
   stackexchange:  http://stackoverflow.com/users/400222/stephenking
   xing:           Steffen_Gebert
+  slideshare:     stephenking
   linkedin:
   instagram:
   flickr:
