Oh, it would be fun to give a talk again

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ links:
     url: /
     external: false
     icon: home
+  - title: Speaking
+    url: /speaking
   - title: Tags
     url: /tags
 
