--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Steffen Gebert
 description:
 logo:             stg.png
-disqus_shortname:
+disqus_shortname: st-g-de
 # Assign a default image for your site's header and footer
 default_bg:       2015-05-10_07-18-52.jpg
 search:           true
