[BUGFIX] Refer to externals via HTTPS

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   twitter:        StGebert
   facebook:
   github:         StephenKing
-  stackexchange:  http://stackoverflow.com/users/400222/stephenking
+  stackexchange:  https://stackoverflow.com/users/400222/stephenking
   xing:           Steffen_Gebert
   slideshare:     stephenking
   linkedin:
