--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,8 @@ links:
     url: /speaking
   - title: Tags
     url: /tags
+  - title: Imprint
+    url: /imprint
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Europe/Berlin
